--- a/src/assets/icons/icons.css
+++ b/src/assets/icons/icons.css
@@ -74,3 +74,8 @@
     mask-size: 100%;
 }
 
+.icon-info {
+    mask: url(./svg/informate.svg);
+    mask-repeat: no-repeat;
+    mask-size: 100%;
+}
