--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   </aside>
   <aside class="w-pag w-full lg:w-[var(content-width)]">
     <app-main-header />
-    <section class="p-8">
+    <section class="p-4 lg:p-8">
       <router-outlet />
     </section>
   </aside>
