--- a/src/app/components/uc-manager/uc-statistics/uc-statistics.component.html
+++ b/src/app/components/uc-manager/uc-statistics/uc-statistics.component.html
@@ -1,6 +1,6 @@
-<div class="flex gap-4">
+<div class="flex flex-col lg:flex-row gap-4">
     @for (item of statisticsData; track item.label) {
-    <div [class]="item.class">
+    <div [class]="item.class" class="w-full">
         <app-card [title]="item.label">
             <div class="flex items-center min-h-[80px]">
                 <p class="text-center w-full">    Sem dados. Cadastre suas UCs</p>
