--- a/src/styles.css
+++ b/src/styles.css
@@ -37,3 +37,13 @@ body {
     @apply btn;
     color: var(--bg-btn-primary);
 }
+
+input, select {
+    @apply focus:border-0 ring-0 outline-none w-full bg-transparent
+}
+
+
+
+.input {
+    @apply rounded py-2 px-4  border  bg-white;
+}
