--- a/src/app/components/uc-manager/uc-list/uc-list.component.html
+++ b/src/app/components/uc-manager/uc-list/uc-list.component.html
@@ -1,10 +1,38 @@
 <app-card title="Lista de UCs cadastradas">
-    <div class="h-[45vh]">
+    <div class="h-[42vh]">
         @if(ucList.length > 0) {
-              <div>Tabela</div>
-            <!-- @for (item of ucList; track item.id) {
-            <div> {{ item }}</div>
-            } -->
+        <div class="w-full mt-4 p-4 overflow-x-auto ">
+                <div class="inline-flex lg:flex border-b">
+                    <div class="w-[150px] lg:w-1/5 text-center font-semibold mb-2">Unidade/Instalação</div>
+                    <div class="w-[150px] lg:w-1/5 text-center font-semibold mb-2">N° cliente</div>
+                    <div class="w-[150px] lg:w-1/5 text-center font-semibold mb-2">Empresa</div>
+                    <div class="w-[150px] lg:w-1/5 text-center font-semibold mb-2">Unidade</div>
+                    <div class="w-[150px] lg:w-1/5 text-center font-semibold mb-2">Status</div>
+                    <div class="w-[150px] lg:w-1/5 text-center font-semibold mb-2">Ações</div>
+                </div>
+            <div class=" space-y-4 w-full">
+                @for(item of ucList; track item.id) {
+                    <div class=" inline-flex lg:flex">
+                        <div class=" w-[150px] lg:w-1/5 mt-4 text-center truncate">{{item.numInstallation}}</div>
+                        <div class=" w-[150px] lg:w-1/5 mt-4 text-center truncate">{{item.numClient}}</div>
+                        <div class=" w-[150px] lg:w-1/5 mt-4 text-center truncate">{{item.company}}</div>
+                        <div class=" w-[150px] lg:w-1/5 mt-4 text-center truncate">{{item.unitDescription}}</div>
+                        <div class=" w-[150px] lg:w-1/5 mt-4 text-center flex justify-center"> 
+                            <span [class]="item.active ? 'badge-green' : 'badge-zinc'">
+                                {{item.active ? 'ativo' : 'inativo' }}
+                            </span>
+                         </div>
+                        <div class="w-[150px] lg:w-1/5 mt-4 flex justify-center gap-2"> 
+                                 
+                                <button alt="exclui UC"><i class="icon icon-edit h-4 w-4 bg-zinc-500"></i></button>
+                                <button alt="exclui UC"><i class="icon icon-settings-outline h-4 w-4 bg-blue-500"></i></button>
+                                <button alt="exclui UC"><i class="icon icon-trash h-4 w-4 bg-red-500"></i></button>
+                            
+                        </div>
+                    </div>
+                }
+            </div>
+        </div>
         }
         @else {
             <div class="h-full flex justify-center items-center flex-col">
