--- a/src/app/pages/uc-form-page/uc-form-page.component.html
+++ b/src/app/pages/uc-form-page/uc-form-page.component.html
@@ -1,47 +1,30 @@
 <header class="flex justify-between ">
     <h1 class="text-xl font-semibold flex items-center gap-2 m-0">
         <i class="icon icon-add-home h-7 w-7 bg-zinc-900"></i>
-        Cadastro de nova UC
+        Cadastro de nova UC {{t.length}}
+       
     </h1>
     <div class="flex space-x-4">
 
         <a routerLink="/uc" class="btn-danger">
             Cancelar
         </a>
-        <button (click)="onSave()" class="btn-primary">
+        @if(isLoading) {
+            <div class="h-8 w-8 border-4 rounded-full animate-spin border-l-0 "></div>
+        }
+        @else {   
+            <button
+            [disabled]="!profileForm.valid"
+            (click)="onSave()" class="btn-primary">
             <i class="icon icon-upload-file w-5 h-5 bg-white"></i>
             Cadastrar UC
         </button>
+    }
     </div>
 </header>
 
 <section>
     <form [formGroup]="profileForm" class="p-8 space-y-8">
-        <!-- <div class="max-w-[200px]">
-            <p class="flex justify-between">
-                <label for="" class="text-xs">Vigência inicial</label>
-                <i class="icon icon-info h-2 w-2 bg-zinc-900"></i>
-            </p>
-            <input formControlName="initialValidity" id="" class='input w-full' type="date" />
-        </div>
-
-        <div class="w-[200px]">
-            <app-text-field label="Teste" [required]="true">
-                <input type="text" name="" id="">
-            </app-text-field>
-        </div>
-
-        <div class="w-[200px]">
-            <app-text-field label="Teste" [required]="true">
-                <select formControlName="concessionaire">
-                    @for(item of listConcessionaire; let idx = $index; track idx) {
-                    <option [ngValue]="item">{{item}}</option>
-                    }
-                </select>
-            </app-text-field>
-        </div> -->
-
-
         @for(line of lines; track line) {
         <div class="flex flex-wrap gap-8">
             @for(item of formInfo; track item.entity) {
