--- a/src/app/pages/uc-manager-page/uc-manager-page.component.html
+++ b/src/app/pages/uc-manager-page/uc-manager-page.component.html
@@ -17,7 +17,7 @@
     </header>
 
     <section class="mt-4 space-x-4">
-        <app-uc-statistics />
-        <app-uc-list />
+        <app-uc-statistics [ucList]="list" />
+        <app-uc-list [ucList]="list" />
     </section>
 </div>
