--- a/src/styles.css
+++ b/src/styles.css
@@ -22,11 +22,11 @@ body {
 
 
 .btn {
-    @apply flex items-center gap-2 rounded px-4 py-2 cursor-pointer text-white;
+    @apply flex items-center gap-2 rounded px-4 py-2 cursor-pointer text-white disabled:cursor-auto ;
 }
 
 .btn-primary {
-    @apply btn bg-[--bg-btn-primary] hover:bg-blue-600/90;
+    @apply btn bg-[--bg-btn-primary] hover:bg-blue-600/90 disabled:hover:bg-[--bg-btn-primary] disabled:opacity-20;
 }
 
 .btn-danger {
@@ -47,3 +47,20 @@ input, select {
 .input {
     @apply rounded py-2 px-4  border  bg-white;
 }
+
+.badge {
+    @apply rounded-2xl text-xs p-1 px-3 font-semibold
+}
+
+.badge-green {
+    @apply badge bg-green-500 text-white
+}
+
+.badge-red {
+    @apply badge bg-red-500 text-white
+}
+
+.badge-zinc {
+    @apply badge bg-zinc-400 text-white
+}
+
