--- a/src/app/pages/uc-manager-page/uc-manager-page.component.html
+++ b/src/app/pages/uc-manager-page/uc-manager-page.component.html
@@ -1,16 +1,25 @@
 <div>
+    @if(modalImportIsVisible) {
+        <app-modal-import-uc  (close)="modalImportIsVisible = !modalImportIsVisible" />
+    }
+
+    @if(ucToInative) {
+        <app-modal-inative-uc [uc]="ucToInative" (close)="ucToInative = undefined" />
+    }
     <header class="flex items-end flex-col">
         <div class="flex space-x-4">
             <a routerLink="/uc/form" class="btn-primary">
                 <i class="icon icon-add-home w-5 h-5 bg-white"></i>
                 Cadastro manual
             </a>
-            <button class="btn-primary">
+            <button 
+            (click)="modalImportIsVisible = !modalImportIsVisible"
+            class="btn-primary">
                 <i class="icon icon-upload-file w-5 h-5 bg-white"></i>
                 Importar planilha
             </button>
         </div>
-        <button class="text-[--bg-btn-primary] flex gap-2 items-center mt-2 text-xs ">
+        <button (click)="downloadFileExample()" class="text-[--bg-btn-primary] flex gap-2 items-center mt-2 text-xs ">
             <i class="icon icon-download w-5 h-5  bg-[--bg-btn-primary]"></i>
             Download modelo de planilha
         </button>
@@ -18,6 +27,6 @@
 
     <section class="mt-4 space-x-4">
         <app-uc-statistics [ucList]="list" />
-        <app-uc-list [ucList]="list" />
+        <app-uc-list [ucList]="list" (actionsClick)="handleAction($event)" />
     </section>
 </div>
