--- a/src/app/components/uc-manager/modal-import-uc/modal-import-uc.component.html
+++ b/src/app/components/uc-manager/modal-import-uc/modal-import-uc.component.html
@@ -1,5 +1,5 @@
-<app-modal headerTitle="Importal UCs">
-    <div class="w-[700px]">
+<app-modal headerTitle="Importar UCs">
+    <div class="w-[90vw] lg:w-[700px]">
 
         @if(file) {
         <div class="border p-4 rounded-xl flex justify-between mt-4">
