--- a/src/app/components/uc-manager/modal-inative-uc/modal-inative-uc.component.html
+++ b/src/app/components/uc-manager/modal-inative-uc/modal-inative-uc.component.html
@@ -1,9 +1,9 @@
 <app-modal headerTitle="Inativar UC" (closeModal)="close.emit()">
     <p>
-        Voce tem certesa que deseja inativar essa US?
+        Você tem certeza que deseja inativar essa UC?
     </p>
     <p>
-        Se sim escreva <strong>INATIVAR</strong> no compo a baixo e click em salvar
+        Se sim, escreva <strong>INATIVAR</strong> no campo abaixo e clique em salvar
     </p>
 
     <div class="mt-8">
