--- a/src/app/components/uc-manager/uc-list/uc-list.component.html
+++ b/src/app/components/uc-manager/uc-list/uc-list.component.html
@@ -26,6 +26,7 @@
                                  
                                 <button (click)="actionsClick.emit({action: 'edit', uc: item})"><i class="icon icon-edit h-4 w-4 bg-zinc-500"></i></button>
                                 <button (click)="actionsClick.emit({action: 'edit', uc: item})"><i class="icon icon-settings-outline h-4 w-4 bg-blue-500"></i></button>
+                               
                                 <button (click)="actionsClick.emit({action: 'delete', uc: item})"><i class="icon icon-trash h-4 w-4 bg-red-500"></i></button>
                             
                         </div>
@@ -35,7 +36,7 @@
         </div>
         }
         @else {
-            <div class="h-full flex justify-center items-center flex-col">
+            <div class="h-[30vh] flex justify-center items-center flex-col">
                 <p class="w-full max-w-4xl mx-auto text-center">
                     Ainda não existem UCs cadastradas no sistema. Cadastre manualmente uma UC ou faça a
                     importação em massa de suas UCs com nosso modelo de planilha
